syntax = "proto3";

package audiounit;

option go_package = "github.com/shaban/serial-data-protocol/benchmarks/pb";

message Parameter {
  uint64 address = 1;
  string display_name = 2;
  string identifier = 3;
  string unit = 4;
  float min_value = 5;
  float max_value = 6;
  float default_value = 7;
  float current_value = 8;
  uint32 raw_flags = 9;
  bool is_writable = 10;
  bool can_ramp = 11;
}

message Plugin {
  string name = 1;
  string manufacturer_id = 2;
  string component_type = 3;
  string component_subtype = 4;
  repeated Parameter parameters = 5;
}

message PluginRegistry {
  repeated Plugin plugins = 1;
  uint32 total_plugin_count = 2;
  uint32 total_parameter_count = 3;
}
